# o_email_schedule

./: .dockerignore  .env.hybrid.example  .gitignore  .ocamlformat  .secret.env  206dump.sql  ADVANCED_TESTING_GUIDE.md  AI_VISUALIZER_PROMPT.md  ASSESSMENT.md  BUG_FIXES_SUMMARY.md  CAMPAIGN_ENHANCEMENTS.md  CLAUDE.md  COMPILATION_STATUS.md  COMPREHENSIVE_TESTING_IMPROVEMENTS.md  COMPREHENSIVE_TESTING_STRATEGY.md  Cargo.toml  DELIVERABLES.md  DUMP_WORKFLOW.md  Dockerfile  Dockerfile.scheduler  Dockerfile_enhanced  FLY_DEPLOYMENT_README.md  FUNCTION_DOCUMENTATION_SUMMARY.md  HYBRID_CONFIG_IMPLEMENTATION.md  HYBRID_VISUALIZER_README.md  HYBRID_VISUALIZER_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LITESTREAM_VS_SQLITE3_RSYNC_ANALYSIS.md  MERMAID_DIAGRAMS_SUMMARY.md  Makefile  OCAML_VISUALIZER_STATUS.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PERFORMANCE_REPORT.md  PERFORMANCE_TESTING_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  README_OFFLINE_SYNC.md  (+97 more)
.claude/: settings.local.json
.cursor/rules/: dune-env.mdc
docs/diagrams/: 01-system-overview.mmd  02-scheduling-flow.mmd  04-campaign-system.mmd  05-date-calculations.mmd  06-load-balancing.mmd  07-database-operations.mmd  08-error-handling.mmd  README.md
docs_viz/: index.html  source_data.json  visualization.json
elm-stuff/0.19.1/: ContextTest.elmi  ContextTest.elmo  FieldTest.elmi  FieldTest.elmo  HybridConfig-DataFlow.elmi  HybridConfig-DataFlow.elmo  HybridConfig-MermaidDiagrams.elmi  (+7 more)
email_scheduler/: ACCOMPLISHMENTS.md  README.md  dune-project  email_scheduler.opam
email_scheduler/lib/: dune
email_scheduler/lib/domain/: types.ml
email_scheduler/lib/rules/: dsl.ml
email_scheduler/lib/scheduling/: date_calc.ml  load_balancer.ml  scheduler.ml
email_scheduler/test/: dune  test_scheduler.ml
enhanced_demo/: index.html  source_data.json  visualization.json  visualizer.js
enhanced_test_viz/: source_data.json  visualization.json
examples/: turso_connection_example.rs
focused_viz/: source_data.json  visualization.json
lib/: dune  scheduler.ml
lib/db/: changeset_support.ml  database.ml  database.mli  database_fallback.ml  database_native.ml  simple_db.ml  turso_ffi.ml  turso_integration.ml
lib/domain/: contact.ml  types.ml
lib/rules/: dsl.ml  exclusion_window.ml
lib/scheduling/: date_calc.ml  email_scheduler.ml  load_balancer.ml
lib/utils/: audit.ml.disabled  audit_simple.ml  config.ml  date_time.ml  simple_date.ml  size_profiles.ml  system_constants.ml  zip_data.ml
lib/visualizer/: ast_analyzer.ml  call_graph.ml  doc_extractor.ml  dune  hybrid_config_bridge.ml  json_serializer.ml
master_test_results_20250613_212511/: MASTER_TEST_REPORT.md  test_results.txt
migrations/: 001_add_organization_config.sql  002_add_state_buffer_overrides.sql  003_add_campaign_tables.sql
performance_results/: scalability_20250605_223645.txt  test_results_20250605_222810.txt  test_results_20250605_223210.txt  test_results_20250605_223632.txt
performance_results_20250613_212556/: MASSIVE_PERFORMANCE_REPORT.md  memory_usage.csv
prompts/: create_flowchart_script.md  function_documentation_prompt.md  mermaid_generation.md
simulation_results_20250613_212546/: SIMULATION_REPORT.md
src/: ContextTest.elm  FieldTest.elm  ImportTest.elm  Main.elm  MainMinimal.elm  SimpleTest.elm  VisualizationTest.elm  database.ts  lib.rs  main.rs
standalone_visualizer/: dune  visualizer_cli.ml
sync-service/: README.md  go.mod  go.sum  main.go  start.sh
test/: dune  test_advanced_features.ml  test_business_logic_comprehensive.ml  test_edge_cases.ml  test_golden_master.ml  test_load_balancing_comprehensive.ml  test_properties.ml  test_rules.ml  test_scheduler.ml  test_scheduler_integration.ml  test_scheduler_simple.ml  test_size_profiles.ml  test_state_rules_matrix.ml
test_results_20250613_191649/: COMPREHENSIVE_TEST_REPORT.md
test_results_20250613_212535/: COMPREHENSIVE_TEST_REPORT.md
test_viz/: dune  test_core_visualizer.ml
(+15 files in other folders)
