[package]
name = "turso-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "turso-sync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
libsql = { version = "0.9.9", features = ["core", "replication", "remote"] } 
