(lang dune 3.0)

(name email_scheduler)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name email_scheduler)
 (synopsis "OCaml Email Scheduling System")
 (description "A sophisticated email scheduling system with state-based exclusion rules, campaign management, and load balancing")
 (depends
  ocaml
  dune
  lwt
  ptime
  yojson
  logs))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
