(include_subdirs unqualified)

; Rule to build the Rust FFI library
(rule
 (targets libturso_ocaml_ffi.a dllturso_ocaml_ffi.so)
 (deps (universe))
 (action
  (progn
   (run cargo build --release --lib)
   (copy target/release/libturso_ocaml_ffi.a libturso_ocaml_ffi.a)
   (copy target/release/libturso_ocaml_ffi.so dllturso_ocaml_ffi.so))))

(library
 (name scheduler)
 (public_name scheduler)
 (libraries
  str
  unix
  sqlite3
  lwt)
 ; Link against the Rust FFI library
 (foreign_archives turso_ocaml_ffi)
 (c_library_flags (-lpthread -ldl -lm)))
